# random-file-adder

./: Cargo.toml  README.md
src/: main.rs
